# Discord-VOICE

./: .gitignore  Readme.md  pyproject.toml
data/: Config.ini
discordvoice/: __main__.py
discordvoice/discord/: discordhandler.py
discordvoice/utils/: Consts.py
discordvoice/voice/: voicehandler.py
