[tool.poetry]
name = "discordvip"
version = "0.1.0"
description = ""
authors = ["NicholasBlackburn1 <nickblackburn02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
pyVoIP = "^1.5.4"
configparser = "^5.2.0"
pathlib = "^1.0.1"
"discord.js" = "^1.0.7"
"discord.py" = "^1.7.3"
PyNaCl = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
